# ModelGatewayProxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LLM_Gateway_Phase1_Final_Learning_Plan.md  Makefile  README.md  alembic.ini  fly.toml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  prometheus.yml
.devcontainer/grafana/dashboards/: llm-gateway.json
.devcontainer/grafana/provisioning/dashboards/: dashboard.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_usage_records.py
docs/: deployment.md
docs/providers/: README.md  design-decisions.md  troubleshooting.md
scripts/: test_all_providers.py  test_cache.py  test_litellm_wrapper.py  test_rate_limiting.py  test_semantic_cache.py
src/llmgateway/: __init__.py  config.py  main.py
src/llmgateway/api/: admin.py  completions.py  health.py
src/llmgateway/cache/: __init__.py  base.py  cache_manager.py  embeddings.py  redis_cache.py
src/llmgateway/cost/: __init__.py  pricing.py  tracker.py
src/llmgateway/observability/: __init__.py  metrics.py  tracing.py
src/llmgateway/providers/: __init__.py  errors.py  litellm_wrapper.py  models.py
src/llmgateway/ratelimit/: __init__.py  limiter.py  token_bucket.py
tests/: conftest.py  test_health.py
tests/api/: test_admin.py  test_completions.py
tests/cache/: test_cache_manager.py  test_embeddings.py  test_redis_cache.py
tests/cost/: test_pricing.py  test_tracker.py
tests/integration/: test_gateway_integration.py
tests/providers/: test_litellm_wrapper.py
tests/ratelimit/: test_limiter.py  test_token_bucket.py
(+2 files in other folders)
